// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsMenu component should have the correct styles (Those that depends on the theme) 1`] = `
.c0 {
  display: block;
  cursor: pointer;
  padding: 0;
  margin: 0;
  border-radius: 5px;
  background-color: rgb(255,255,255);
  font-size: calc(12 * 1px);
  line-height: calc(16 * 1px);
  font-weight: 500;
  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12),0 2px 4px -1px rgba(0,0,0,0.2);
}

.c0 li {
  list-style: none;
  padding: 15px;
  color: rgba(0,0,0,0.54);
}

.c0 li:hover {
  color: rgb(255,87,50);
  background-color: rgba(255,87,50,0.1);
}

<ul
  className="c0"
>
  <li>
    <div
      onClick={undefined}
      onKeyUp={undefined}
      role="button"
      tabIndex={0}
    >
      <div>
        Parent 1
      </div>
    </div>
  </li>
  <li>
    <div
      onClick={undefined}
      onKeyUp={undefined}
      role="button"
      tabIndex={1}
    >
      <div>
        Parent 2
      </div>
    </div>
  </li>
  <li>
    <div
      onClick={undefined}
      onKeyUp={undefined}
      role="button"
      tabIndex={2}
    >
      <div>
        Child 1.1
      </div>
    </div>
  </li>
  <li>
    <div
      onClick={undefined}
      onKeyUp={undefined}
      role="button"
      tabIndex={3}
    >
      <div>
        Child 1.2
      </div>
    </div>
  </li>
  <li>
    <div
      onClick={undefined}
      onKeyUp={undefined}
      role="button"
      tabIndex={4}
    >
      <div>
        Child 1.2.1
      </div>
    </div>
  </li>
</ul>
`;

exports[`ItemsMenu component should render with data 1`] = `
<styled.ul>
  <li
    key="1"
  >
    <div
      role="button"
      tabIndex={0}
    >
      <div>
        Parent 1
      </div>
    </div>
  </li>
  <li
    key="2"
  >
    <div
      role="button"
      tabIndex={1}
    >
      <div>
        Parent 2
      </div>
    </div>
  </li>
  <li
    key="3"
  >
    <div
      role="button"
      tabIndex={2}
    >
      <div>
        Child 1.1
      </div>
    </div>
  </li>
  <li
    key="4"
  >
    <div
      role="button"
      tabIndex={3}
    >
      <div>
        Child 1.2
      </div>
    </div>
  </li>
  <li
    key="5"
  >
    <div
      role="button"
      tabIndex={4}
    >
      <div>
        Child 1.2.1
      </div>
    </div>
  </li>
</styled.ul>
`;

exports[`ItemsMenu component should render with empty data 1`] = `<styled.ul />`;
